# codexbar-rs

./: Cargo.toml  README.md
src/: app.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs  output.rs
src/backend/: mod.rs
src/gui/: mod.rs
src/providers/: codex.rs  mock.rs  mod.rs  ollama.rs  openai.rs  status.rs  usage.rs
