[package]
name = "codexbar-rs"
version = "0.1.0"
edition = "2024"
default-run = "codexbar-rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
eframe = { version = "0.33.0", default-features = true }
portable-pty = "0.9.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
